force-app/main/default/objects/Call_Disposition__mdt/Call_Disposition__mdt.object-meta.xml
<CustomObject>
    <label>Call Disposition</label>
    <pluralLabel>Call Dispositions</pluralLabel>
</CustomObject>