force-app/main/default/objects/Call_Disposition__mdt/fields/Commented_Needed__c.field-meta.xml
<CustomField>
    <fullName>Commented_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commented Needed</label>
    <type>Checkbox</type>
</CustomField>