force-app/main/default/objects/Call_Disposition__mdt/fields/L1__c.field-meta.xml
<CustomField>
    <fullName>L1__c</fullName>
    <label>L1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
                <default>true</default>
                <label>Connected</label>
            </value>
            <value>
                <fullName>Not-Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>