force-app/main/default/objects/Call_Disposition__mdt/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <label>L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discussed</fullName>
                <default>true</default>
                <label>Discussed</label>
            </value>
            <value>
                <fullName>Request Call Back</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Completed</fullName>
            </value>
            <value>
                <fullName>Visit Rescheduled</fullName>
            </value>
            <value>
                <fullName>Visit Cancelled</fullName>
            </value>
            <value>
                <fullName>Visit Booked by Mistake</fullName>
            </value>
            <value>
                <fullName>Google Meet Completed</fullName>
            </value>
            <value>
                <fullName>Google Meet Rescheduled</fullName>
            </value>
            <value>
                <fullName>Google Meet Cancelled</fullName>
            </value>
            <value>
                <fullName>Attended and Disconnected</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Not Interested (DND)</fullName>
            </value>
            <value>
                <fullName>Not Lifting</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>