force-app/main/default/objects/Call_Disposition__mdt/fields/Tag_Level__c.field-meta.xml
<CustomField>
    <fullName>Tag_Level__c</fullName>
    <label>Tag Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
                <default>true</default>
                <label>M1</label>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M3+</fullName>
            </value>
            <value>
                <fullName>M3++</fullName>
            </value>
            <value>
                <fullName>M4-</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M7+</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B3+</fullName>
            </value>
            <value>
                <fullName>B3++</fullName>
            </value>
            <value>
                <fullName>B4-</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>B7</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>M7#</fullName>
            </value>
            <value>
                <fullName>U1</fullName>
            </value>
            <value>
                <fullName>U2</fullName>
            </value>
            <value>
                <fullName>U3</fullName>
            </value>
            <value>
                <fullName>U3+</fullName>
            </value>
            <value>
                <fullName>U3++</fullName>
            </value>
            <value>
                <fullName>U4-</fullName>
            </value>
            <value>
                <fullName>U4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>